--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype>
+<!doctype html>
 <html>
 <head>
   <title>Areumdri Art Class</title>
@@ -8,6 +8,9 @@
   <h1><a href="index.html" title="공주네">Areumdri Art Class</a></h1>
   <p><h3><strong>원장 : 김태은</strong></h3>
   <br><img src="girl picture.jpg" width="10%"></p>
+  <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UCNpYbJLrk0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
   <br><h3>경력</h3>
   <ul>
     <li>94년 출생</li>
@@ -23,3 +26,24 @@
 <ul>
   <li>원장의 권한으로 너무 힘든 학생일 시 <strong>합의 후 퇴원 가능</strong></li>
   <li>공지하는 수업시간 이외에 추가적으로 학원에 머무를 시 <strong><u>추가요금</u></strong></li>
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://areumdri.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</body>
+</html>
