--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <title>Areumdri Art Class</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G4TGDHCG89"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G4TGDHCG89');
+</script>
 </head
 <body>
   <h1><a href="index.html" title="공주네">Areumdri Art Class</a></h1>
@@ -26,7 +35,7 @@
 <ul>
   <li>원장의 권한으로 너무 힘든 학생일 시 <strong>합의 후 퇴원 가능</strong></li>
   <li>공지하는 수업시간 이외에 추가적으로 학원에 머무를 시 <strong><u>추가요금</u></strong></li>
-  <div id="disqus_thread"></div>
+  <p><div id="disqus_thread"></div>
   <script>
       /**
       *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -56,7 +65,7 @@
   s1.setAttribute('crossorigin','*');
   s0.parentNode.insertBefore(s1,s0);
   })();
-  </script>
+  </script></p>
   <!--End of Tawk.to Script-->
 </body>
 </html>
