--- a/3.html
+++ b/3.html
@@ -4,6 +4,15 @@
 <h1><a href="index.html" title="공주네">Areumdri Art Class</a></h1>
   <title>취미부</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G4TGDHCG89"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G4TGDHCG89');
+</script>
 </head
 <body>
 <h1>취미부</h1>
